widget_derive/tests/ui/declare/widget_before_field_fail.stderr
error: Field should always declare before children.
 --> tests/ui/declare/widget_before_field_fail.rs:9:7
  |
9 |       size
  |       ^^^^
